2007-02-19  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Some internal cleanups.

2007-02-19  Michael Smith  <msmith@fluendo.com>

	* Makefile.am:
	  Add things for pychecker to pycheck
	* configure.ac:
	* flumotion/component/Makefile.am:
	  Add new directory

	* flumotion/component/producers/Makefile.am:
	* flumotion/component/producers/__init__.py:
	* flumotion/component/producers/wms.py:
	* flumotion/component/producers/wms.xml:
	  Checkpoint for work.
	  Doesn't do anything very useful yet.

2007-02-07  Michael Smith  <msmith@fluendo.com>

	* flumotion/test/Makefile.am:
	* misc/Makefile.am:
	  Again, autotoolery to make setup.py work properly.

=== release 0.3.1 ===

2007-01-05  Julien MOUTTE  <julien@moutte.net>

	* flumotion-windowsmedia.spec.in: Remove noarch from spec.

2006-11-10  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/muxers/asf/asf.py:
	  Update ASF muxer to use new muxer class, to avoid deadlockiness.

2006-09-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/encoders/wmv/wmv.py:
	* flumotion/component/encoders/wmv/wmv.xml:
	Add an option to specify the version number of wmv.  Value 2
	means use wmv2 (aka wmv8), anything else means use wmv3 
	(aka wmv9).

=== release 0.3.0 ===

2006-08-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* release 0.3.0

2006-08-30  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/muxers/asf/asf.py:
	* flumotion/component/muxers/asf/asf.xml: Add preroll-time
	property on the ASF muxer component.

2006-05-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  disable libtool, this is Python code

2006-05-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/__init__.py:
	* flumotion/component/muxers/__init__.py:
	  commit some build files

2006-05-02  Julien MOUTTE  <julien@moutte.net>

	* COPYING: Fix licence.