@@ -1,3 +1,10 @@
+2007-02-20  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/producers/wms.py:
+	  Next checkpoint.
+	  Can now negotiate with WME, and dump something that looks like ASF
+	  to a file
+
 2007-02-19  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/producers/wms.py:
